--- a/index.html
+++ b/index.html
@@ -33,3 +33,4 @@
     </footer>
 </body>
 </html>
+<img src="4F45A905-6CB1-4CFC-B8A8-0A3B17D6AA4F.png" alt="Jain Kirana Store Banner" style="width:100%; max-width:900px;" />
