--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
 
   <div class="qr-section">
     <h3>Scan to Pay</h3>
-    <img src="qr.jpg" alt="QR Code" />
+    <img src="payment.png" alt="QR Code" />
     <p>UPI ID: <strong>8400358161@okbizaxis</strong></p>
     <p>Online Payment via UPI / Razorpay Available</p>
   </div>
