--- a/index.html
+++ b/index.html
@@ -256,3 +256,71 @@
     </script>
 </body>
 </html>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Jain Kirana Store</title>
+  <style>
+    body {
+      margin: 0;
+      font-family: Arial, sans-serif;
+      background-color: #fffdf5;
+    }
+    .banner {
+      width: 100%;
+      height: 70vh;
+      background: url('banner.png') no-repeat center center;
+      background-size: cover;
+    }
+    .category-section {
+      padding: 20px;
+      text-align: center;
+    }
+    .category-section h2 {
+      font-size: 24px;
+      margin-bottom: 15px;
+    }
+    .category-buttons {
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: center;
+      gap: 10px;
+    }
+    .category-buttons a {
+      padding: 10px 20px;
+      background-color: #f0f0f0;
+      border-radius: 20px;
+      text-decoration: none;
+      color: #333;
+      font-weight: bold;
+      box-shadow: 0 2px 4px rgba(0,0,0,0.1);
+    }
+    .category-buttons a:hover {
+      background-color: #ffe0b3;
+    }
+  </style>
+</head>
+<body>
+
+  <!-- Banner Image -->
+  <div class="banner"></div>
+
+  <!-- Category Section -->
+  <div class="category-section">
+    <h2>🧺 Categories</h2>
+    <div class="category-buttons">
+      <a href="shop.html?category=Masale">Masale</a>
+      <a href="shop.html?category=Anaj">Anaj & Daal</a>
+      <a href="shop.html?category=Tel">Tel (Oils)</a>
+      <a href="shop.html?category=Aata">Aata & Suji</a>
+      <a href="shop.html?category=Namkeen">Namkeen</a>
+      <a href="shop.html?category=Chini">Chini & Mithai</a>
+      <a href="shop.html?category=Beverages">Beverages</a>
+      <a href="shop.html?category=Dairy">Dairy Products</a>
+    </div>
+  </div>
+
+</body>
+</html>
